--- a/src/styles/_const.styl
+++ b/src/styles/_const.styl
@@ -1,7 +1,3 @@
-//
-// 定数
-// つかいまわす数値とかを纏めていますよ
-//
 C_BLUE = #40bbe1;
 C_RED = #cc56a2;
 C_YELLOW = #fbbb1a;
@@ -10,5 +6,6 @@ C_DARKGRAY = #555555;
 C_LIGHTGRAY = #777777;
 C_WHITE = #ffffff;
 
-B_BLACKTILE = url("images/bg_blacktile.jpg");
-B_PAPER = url("images/bg_paper.jpg");
+B_WALL = url("images/wall.jpg");
+B_BLACKTILE = url("images/backgrounds/bg_blacktile.jpg");
+B_PAPER = url("images/backgrounds/bg_paper.jpg");
