--- a/src/styles/_section.styl
+++ b/src/styles/_section.styl
@@ -1,9 +1,5 @@
-//
-// セクション
-// 各個別のデザインを当てるときはこの辺をいじります
-//
 #wall {
-  background-image: url("images/wall.jpg");
+  background-image: B_WALL;
   background-size: cover;
   background-attachment: fixed;
 }
@@ -21,4 +17,9 @@
 }
 #illust {
   background-image: B_PAPER;
+}
+#event {
+  .hidden {
+    display: none;
+  }
 }
