--- a/src/styles/_const.styl
+++ b/src/styles/_const.styl
@@ -1,9 +1,11 @@
 C_BLUE = #40bbe1;
-C_RED = #cc56a2;
+C_RED = #cc73ad;
 C_YELLOW = #fbbb1a;
 C_GREEN = #94c16c;
+C_BLACK = #333333;
 C_DARKGRAY = #555555;
 C_LIGHTGRAY = #777777;
+C_LIGHT = #eeeeee;
 C_WHITE = #ffffff;
 
 B_WALL = url("images/wall.jpg");
