--- a/src/styles/_fonts.styl
+++ b/src/styles/_fonts.styl
@@ -6,7 +6,7 @@ html, body {
   font-family: 'Noto Sans', sans-serif;
   color: C_DARKGRAY;
   a {
-    color: C_BLUE;
+    color: C_RED;
     text-decoration: none;
   }
   p, dt, dd, a {
@@ -18,5 +18,7 @@ h1 {
 }
 h2 {
   font-size: 25px;
-  margin-bottom: 20px;
+}
+.description {
+  margin-bottom: 25px;
 }
