--- a/src/styles/_const.styl
+++ b/src/styles/_const.styl
@@ -5,7 +5,7 @@ C_GREEN = #94c16c;
 C_BLACK = #333333;
 C_DARKGRAY = #555555;
 C_LIGHTGRAY = #777777;
-C_LIGHT = #eeeeee;
+C_LIGHT = #f0f0f0;
 C_WHITE = #ffffff;
 
 B_WALL = url("images/wall.jpg");
