--- a/src/styles/_layout.styl
+++ b/src/styles/_layout.styl
@@ -6,6 +6,15 @@ html, body {
 .section {
   width: 100%;
   padding: 40px 0;
+  position: relative;
+  .link {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
 .container {
   max-width: 960px;
@@ -61,5 +70,15 @@ dl {
       float: none;
       width: 100%;
     }
+  }
+}
+table {
+  width: 100%;
+  th {
+    font-weight: bold;
+  }
+  th, td {
+    text-align: left;
+    line-height: 28px;
   }
 }
