--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,15 @@ body * {
 .section {
   width: 100%;
   padding: 40px 0;
+  position: relative;
+}
+.section .link {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 .container {
   max-width: 960px;
@@ -168,6 +177,17 @@ dl dd {
     width: 100%;
   }
 }
+table {
+  width: 100%;
+}
+table th {
+  font-weight: bold;
+}
+table th,
+table td {
+  text-align: left;
+  line-height: 28px;
+}
 html,
 body {
   font-family: 'Noto Sans', sans-serif;
@@ -197,9 +217,6 @@ h2 {
 .description {
   margin-bottom: 25px;
 }
-.hidden {
-  display: none;
-}
 #wall {
   background-image: url("images/wall.jpg");
   background-size: cover;
@@ -215,7 +232,7 @@ h2 {
   }
 }
 #works {
-  background-color: #eee;
+  background-color: #f0f0f0;
 }
 #works table {
   width: 100%;
@@ -236,6 +253,14 @@ h2 {
 #illust {
   background-image: url("images/backgrounds/bg_paper.jpg");
 }
+#illust .illust {
+  height: 270px;
+}
+@media (max-width: 960px) {
+  #illust .illust {
+    height: auto;
+  }
+}
 #notice .notice {
   color: #cc73ad;
 }
@@ -243,31 +268,48 @@ h2 {
   cursor: pointer;
   opacity: 0.8;
 }
-#event table {
-  width: 100%;
-}
-#event table th {
-  font-weight: bold;
-}
-#event table th,
-#event table td {
-  text-align: left;
+#event {
+  background-color: #f0f0f0;
 }
 #event table .t-date {
-  width: 20%;
+  width: 25%;
 }
 #event table .t-event {
-  width: 30%;
+  width: 40%;
 }
-#event table .t-couple {
-  width: 30%;
+#event table .t-description {
+  width: 35%;
 }
-#event table .t-note {
-  width: 20%;
+#dist table .t-title {
+  width: 33%;
+}
+#dist table .t-genre {
+  width: 15%;
+}
+#dist table .t-couple {
+  width: 17%;
+}
+#dist table .t-date {
+  width: 13%;
+}
+#dist table .t-size {
+  width: 10%;
+}
+#dist table .t-pages {
+  width: 12%;
+}
+#contribute {
+  background-color: #f0f0f0;
+}
+#contribute table .t-title {
+  width: 40%;
+}
+#contribute table .t-description {
+  width: 60%;
 }
 #footer {
   background-image: url("images/backgrounds/bg_blacktile.jpg");
-  color: #eee;
+  color: #f0f0f0;
 }
 #footer p,
 #footer a {
