--- a/styles.css
+++ b/styles.css
@@ -1,324 +1,1 @@
-html {
-  color: #000;
-  background: #fff;
-}
-body,
-div,
-dl,
-dt,
-dd,
-ul,
-ol,
-li,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-pre,
-code,
-form,
-fieldset,
-legend,
-input,
-textarea,
-p,
-blockquote,
-th,
-td {
-  margin: 0;
-  padding: 0;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-fieldset,
-img {
-  border: 0;
-}
-address,
-caption,
-cite,
-code,
-dfn,
-em,
-strong,
-th,
-var {
-  font-style: normal;
-  font-weight: normal;
-}
-ol,
-ul {
-  list-style: none;
-}
-caption,
-th {
-  text-align: left;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: 100%;
-  font-weight: normal;
-}
-q:before,
-q:after {
-  content: '';
-}
-abbr,
-acronym {
-  border: 0;
-  font-variant: normal;
-}
-sup {
-  vertical-align: text-top;
-}
-sub {
-  vertical-align: text-bottom;
-}
-input,
-textarea,
-select {
-  font-family: inherit;
-  font-size: inherit;
-  font-weight: inherit;
-  *font-size: 100%;
-/*to enable resizing for IE*/
-}
-legend {
-  color: #000;
-}
-#yui3-css-stamp.cssreset {
-  display: none;
-}
-html *,
-body * {
-  box-sizing: border-box;
-}
-.section {
-  width: 100%;
-  padding: 40px 0;
-  position: relative;
-}
-.section .link {
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-}
-.container {
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 0 10px;
-  text-align: center;
-  overflow: hidden;
-}
-.container .col20,
-.container .col30,
-.container .col70,
-.container .col100 {
-  float: left;
-  padding: 0 10px;
-}
-.container .col20 {
-  width: 20%;
-}
-.container .col30 {
-  width: 30%;
-}
-.container .col70 {
-  width: 70%;
-}
-.container .col100 {
-  width: 100%;
-}
-@media (max-width: 960px) {
-  .container .col {
-    float: none;
-  }
-  .container .col20 {
-    width: 50%;
-  }
-  .container .col30,
-  .container .col70,
-  .container .col100 {
-    width: 100%;
-  }
-}
-dl {
-  overflow: hidden;
-}
-dl dt,
-dl dd {
-  float: left;
-  line-height: 24px;
-  text-align: left;
-}
-dl dt {
-  width: 25%;
-  font-weight: bold;
-}
-dl dd {
-  width: 75%;
-  margin-bottom: 5px;
-}
-@media (max-width: 960px) {
-  dl dt,
-  dl dd {
-    float: none;
-    width: 100%;
-  }
-}
-table {
-  width: 100%;
-}
-table th {
-  font-weight: bold;
-}
-table th,
-table td {
-  text-align: left;
-  line-height: 28px;
-}
-html,
-body {
-  font-family: 'Noto Sans', sans-serif;
-  color: #555;
-}
-html a,
-body a {
-  color: #cc73ad;
-  text-decoration: none;
-}
-html p,
-body p,
-html dt,
-body dt,
-html dd,
-body dd,
-html a,
-body a {
-  font-size: 15px;
-}
-h1 {
-  font-size: 35px;
-}
-h2 {
-  font-size: 25px;
-}
-.description {
-  margin-bottom: 25px;
-}
-#wall {
-  background-image: url("images/wall.jpg");
-  background-size: cover;
-}
-#profile {
-  background-color: #fff;
-}
-@media (max-width: 960px) {
-  #profile .profile-image {
-    display: block;
-    width: 50%;
-    margin: 0 auto;
-  }
-}
-#works {
-  background-color: #f0f0f0;
-}
-#works table {
-  width: 100%;
-}
-#works table th {
-  font-weight: bold;
-}
-#works table th,
-#works table td {
-  text-align: left;
-}
-#works table .t-date {
-  width: 20%;
-}
-#works table .t-description {
-  width: 80%;
-}
-#illust {
-  background-image: url("images/backgrounds/bg_paper.jpg");
-}
-#illust .illust {
-  height: 270px;
-}
-@media (max-width: 960px) {
-  #illust .illust {
-    height: auto;
-  }
-}
-#notice .notice {
-  color: #cc73ad;
-}
-#notice:hover {
-  cursor: pointer;
-  opacity: 0.8;
-}
-#event {
-  background-color: #f0f0f0;
-}
-#event table .t-date {
-  width: 25%;
-}
-#event table .t-event {
-  width: 40%;
-}
-#event table .t-description {
-  width: 35%;
-}
-#dist table .t-title {
-  width: 33%;
-}
-#dist table .t-genre {
-  width: 15%;
-}
-#dist table .t-couple {
-  width: 17%;
-}
-#dist table .t-date {
-  width: 13%;
-}
-#dist table .t-size {
-  width: 10%;
-}
-#dist table .t-pages {
-  width: 12%;
-}
-#contribute {
-  background-color: #f0f0f0;
-}
-#contribute table .t-title {
-  width: 40%;
-}
-#contribute table .t-description {
-  width: 60%;
-}
-#footer {
-  background-image: url("images/backgrounds/bg_blacktile.jpg");
-  color: #f0f0f0;
-}
-#footer p,
-#footer a {
-  text-align: right;
-  font-size: 12px;
-}
-#footer a {
-  color: #fbbb1a;
-}
-img {
-  width: 100%;
-}
+html{color:#000;background:#fff}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0}table{border-collapse:collapse;border-spacing:0}fieldset,img{border:0}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal}ol,ul{list-style:none}caption,th{text-align:left}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}q:before,q:after{content:''}abbr,acronym{border:0;font-variant:normal}sup{vertical-align:text-top}sub{vertical-align:text-bottom}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;*font-size:100%;}legend{color:#000}#yui3-css-stamp.cssreset{display:none}html *,body *{box-sizing:border-box}.section{width:100%;padding:40px 0;position:relative;}.section .link{display:block;position:absolute;left:0;top:0;width:100%;height:100%}.container{max-width:960px;margin:0 auto;padding:0 10px;text-align:center;overflow:hidden;}.container .col20,.container .col30,.container .col70,.container .col100{float:left;padding:0 10px}.container .col20{width:20%}.container .col30{width:30%}.container .col70{width:70%}.container .col100{width:100%}@media (max-width:960px){.container .col{float:none}.container .col20{width:50%}.container .col30,.container .col70,.container .col100{width:100%}}dl{overflow:hidden;}dl dt,dl dd{float:left;line-height:24px;text-align:left}dl dt{width:25%;font-weight:bold}dl dd{width:75%;margin-bottom:5px}@media (max-width:960px){dl dt,dl dd{float:none;width:100%}}table{width:100%;}table th{font-weight:bold}table th,table td{text-align:left;line-height:28px}html,body{font-family:'Noto Sans',sans-serif;color:#555;}html a,body a{color:#cc73ad;text-decoration:none}html p,body p,html dt,body dt,html dd,body dd,html a,body a{font-size:15px}h1{font-size:35px}h2{font-size:25px}.description{margin-bottom:25px}#wall{background-image:url("images/wall.jpg");background-size:cover}#profile{background-color:#fff;}@media (max-width:960px){#profile .profile-image{display:block;width:50%;margin:0 auto}}#works{background-color:#f0f0f0;}#works table{width:100%;}#works table th{font-weight:bold}#works table th,#works table td{text-align:left}#works table .t-date{width:20%}#works table .t-description{width:80%}#illust{background-image:url("images/backgrounds/bg_paper.jpg");}#illust .illust{height:270px;}@media (max-width:960px){#illust .illust{height:auto}}#notice .notice{color:#cc73ad}#notice:hover{cursor:pointer;opacity:.8}#event{background-color:#f0f0f0;}#event table .t-date{width:25%}#event table .t-event{width:40%}#event table .t-description{width:35%}#dist table .t-title{width:33%}#dist table .t-genre{width:15%}#dist table .t-couple{width:17%}#dist table .t-date{width:13%}#dist table .t-size{width:10%}#dist table .t-pages{width:12%}#contribute{background-color:#f0f0f0;}#contribute table .t-title{width:40%}#contribute table .t-description{width:60%}#footer{background-image:url("images/backgrounds/bg_blacktile.jpg");color:#f0f0f0}#footer p,#footer a{text-align:right;font-size:12px}#footer a{color:#fbbb1a}img{width:100%}
